--- a/views/gamePlay.fxml
+++ b/views/gamePlay.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1100.0" styleClass="background" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="controllers.GamePlayController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1100.0" styleClass="background" stylesheets="@../stylesheets/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GamePlayController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="657.7333374023438" minWidth="10.0" prefWidth="657.7333374023438" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="542.5333251953125" minWidth="10.0" prefWidth="442.26666259765625" />
