--- a/views/setup.fxml
+++ b/views/setup.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.image.ImageView?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1100.0" styleClass="background" stylesheets="@../stylesheets/style.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="controllers.SetupController">
+<GridPane fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1100.0" styleClass="background" stylesheets="@../stylesheets/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SetupController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.60003662109375" minWidth="10.0" prefWidth="25.600006103515625" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="783.9999145507812" minWidth="10.0" prefWidth="538.6666625976562" />
@@ -25,7 +26,7 @@
    <children>
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
          <children>
-            <Button layoutX="142.0" layoutY="-3.0" mnemonicParsing="false" text="READY">
+            <Button layoutX="142.0" layoutY="-3.0" mnemonicParsing="false" onAction="#ready" text="READY">
                <font>
                   <Font size="33.0" />
                </font>
@@ -49,5 +50,13 @@
             <ImageView fx:id="image" fitHeight="193.0" fitWidth="248.0" layoutX="94.0" layoutY="277.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </AnchorPane>
+      <Button mnemonicParsing="false" onAction="#reset" text="Reset" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="BOTTOM">
+         <GridPane.margin>
+            <Insets bottom="10.0" />
+         </GridPane.margin>
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
    </children>
 </GridPane>
