--- a/views/setup.fxml
+++ b/views/setup.fxml
@@ -26,7 +26,7 @@
    <children>
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
          <children>
-            <Button layoutX="142.0" layoutY="-3.0" mnemonicParsing="false" onAction="#ready" text="READY">
+            <Button fx:id="readyButton" layoutX="142.0" layoutY="-3.0" mnemonicParsing="false" onAction="#ready" text="READY">
                <font>
                   <Font size="33.0" />
                </font>
