--- a/views/start.fxml
+++ b/views/start.fxml
@@ -3,22 +3,36 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1100.0" styleClass="background" stylesheets="@../stylesheets/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.StartController">
+
+<GridPane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.StartController">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+   </rowConstraints>
    <children>
-      <TextField fx:id="nameField" layoutX="436.0" layoutY="272.0" onAction="#nameAction" prefHeight="43.0" prefWidth="219.0" promptText="User Name" styleClass="txtField" />
-      <Text layoutX="360.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="BATTLESHIPS" wrappingWidth="411.4290466308594">
-         <font>
-            <Font size="69.0" />
-         </font>
-      </Text>
-      <Text layoutX="440.0" layoutY="252.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter your name:" />
-      <Button fx:id="startButton" layoutX="450.0" layoutY="542.0" mnemonicParsing="false" onAction="#startGame" prefHeight="69.0" prefWidth="164.0" styleClass="startButton" text="Start Game" />
-      <CheckBox fx:id="hostBox" layoutX="495.0" layoutY="368.0" mnemonicParsing="false" onAction="#hostSelect" text="Host Game" />
-      <CheckBox fx:id="joinBox" layoutX="495.0" layoutY="427.0" mnemonicParsing="false" onAction="#joinSelect" text="Join Game" />
-      <TextField fx:id="codeField" layoutX="461.0" layoutY="471.0" promptText="Game Code" />
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1100.0" styleClass="background" stylesheets="@../stylesheets/style.css">
+         <children>
+            <TextField fx:id="nameField" layoutX="436.0" layoutY="272.0" onAction="#nameAction" prefHeight="43.0" prefWidth="219.0" promptText="User Name" styleClass="txtField" />
+            <Text layoutX="360.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="BATTLESHIPS" wrappingWidth="411.4290466308594">
+               <font>
+                  <Font size="69.0" />
+               </font>
+            </Text>
+            <Text layoutX="440.0" layoutY="252.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter your name:" />
+            <Button fx:id="startButton" layoutX="450.0" layoutY="542.0" mnemonicParsing="false" onAction="#startGame" prefHeight="69.0" prefWidth="164.0" styleClass="startButton" text="Start Game" />
+            <CheckBox fx:id="hostBox" layoutX="495.0" layoutY="368.0" mnemonicParsing="false" onAction="#hostSelect" text="Host Game" />
+            <CheckBox fx:id="joinBox" layoutX="495.0" layoutY="427.0" mnemonicParsing="false" onAction="#joinSelect" text="Join Game" />
+            <TextField fx:id="codeField" layoutX="461.0" layoutY="471.0" promptText="Game Code" />
+         </children>
+      </Pane>
    </children>
-</Pane>
+</GridPane>
