--- a/views/start.fxml
+++ b/views/start.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <GridPane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.StartController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -22,16 +21,16 @@
       <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1100.0" styleClass="background" stylesheets="@../stylesheets/style.css">
          <children>
             <TextField fx:id="nameField" layoutX="436.0" layoutY="272.0" onAction="#nameAction" prefHeight="43.0" prefWidth="219.0" promptText="User Name" styleClass="txtField" />
-            <Text layoutX="360.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="BATTLESHIPS" wrappingWidth="411.4290466308594">
+            <Text fill="#dcdcdc" layoutX="360.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="BATTLESHIPS" wrappingWidth="411.4290466308594">
                <font>
                   <Font size="69.0" />
                </font>
             </Text>
-            <Text layoutX="440.0" layoutY="252.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter your name:" />
+            <Text fill="WHITE" layoutX="440.0" layoutY="252.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter your name:" />
             <Button fx:id="startButton" layoutX="450.0" layoutY="542.0" mnemonicParsing="false" onAction="#startGame" prefHeight="69.0" prefWidth="164.0" styleClass="startButton" text="Start Game" />
-            <CheckBox fx:id="hostBox" layoutX="495.0" layoutY="368.0" mnemonicParsing="false" onAction="#hostSelect" text="Host Game" />
-            <CheckBox fx:id="joinBox" layoutX="495.0" layoutY="427.0" mnemonicParsing="false" onAction="#joinSelect" text="Join Game" />
-            <TextField fx:id="codeField" layoutX="461.0" layoutY="471.0" promptText="Game Code" />
+            <CheckBox fx:id="hostBox" layoutX="495.0" layoutY="368.0" mnemonicParsing="false" onAction="#hostSelect" text="Host Game" textFill="WHITE" />
+            <CheckBox fx:id="joinBox" layoutX="495.0" layoutY="427.0" mnemonicParsing="false" onAction="#joinSelect" text="Join Game" textFill="WHITE" />
+            <TextField fx:id="codeField" layoutX="434.0" layoutY="464.0" prefHeight="43.0" prefWidth="204.0" promptText="Game Code" />
          </children>
       </Pane>
    </children>
