--- a/views/gamePlay.fxml
+++ b/views/gamePlay.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -84,5 +85,25 @@
             <Pane opacity="0.25" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: black;" />
          </children>
       </GridPane>
+      <AnchorPane fx:id="winPane" maxHeight="250.0" maxWidth="400.0" opacity="0.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: GREEN;" GridPane.halignment="CENTER">
+         <children>
+            <Text fill="WHITE" layoutX="105.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="YOU WIN">
+               <font>
+                  <Font size="47.0" />
+               </font>
+            </Text>
+            <Button fx:id="exit" layoutX="158.0" layoutY="146.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="94.0" text="Exit" />
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="losePane" maxHeight="250.0" maxWidth="400.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: RED;" GridPane.halignment="CENTER">
+         <children>
+            <Text fill="WHITE" layoutX="99.0" layoutY="103.0" strokeType="OUTSIDE" strokeWidth="0.0" text="YOU LOSE">
+               <font>
+                  <Font size="47.0" />
+               </font>
+            </Text>
+            <Button layoutX="156.0" layoutY="152.0" mnemonicParsing="false" onAction="#exit" prefHeight="47.0" prefWidth="94.0" text="Exit" />
+         </children>
+      </AnchorPane>
    </children>
 </GridPane>
