--- a/views/gamePlay.fxml
+++ b/views/gamePlay.fxml
@@ -85,7 +85,7 @@
             <Pane opacity="0.25" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: black;" />
          </children>
       </GridPane>
-      <AnchorPane fx:id="winPane" maxHeight="250.0" maxWidth="400.0" opacity="0.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: GREEN;" GridPane.halignment="CENTER">
+      <AnchorPane fx:id="winPane" maxHeight="250.0" maxWidth="400.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: GREEN;" GridPane.halignment="CENTER">
          <children>
             <Text fill="WHITE" layoutX="105.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="YOU WIN">
                <font>
