--- a/views/gamePlay.fxml
+++ b/views/gamePlay.fxml
@@ -92,7 +92,7 @@
                   <Font size="47.0" />
                </font>
             </Text>
-            <Button fx:id="exit" layoutX="158.0" layoutY="146.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="94.0" text="Exit" />
+            <Button layoutX="158.0" layoutY="146.0" mnemonicParsing="false" onAction="#exit" prefHeight="47.0" prefWidth="94.0" text="Exit" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="losePane" maxHeight="250.0" maxWidth="400.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: RED;" GridPane.halignment="CENTER">
